--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -87,3 +87,65 @@
 .events-ongoing p{
     text-align: left !important;
 }
+
+@media only screen and (max-width: 600px) {
+    .welcome-text{
+        font-size: 3.6rem;
+        margin-top: 35%;
+    }
+    .home-banner-text{
+        font-size: 3.6rem !important;
+    }
+    .remove{
+        display: none;
+    }
+    .navbar{
+        padding: 0% 1% !important;
+    }
+    .banner-img{
+        background-size: 150% 100% !important;
+        height: 85vh !important;
+    }
+    .home-banner-btnHolder{
+        margin-top: -5% !important;
+    }
+    .what-we-do{
+        padding: 1% 2%;
+    }
+    .what-we-do .card-container-ind{
+        margin-bottom: 7%;
+    }
+    .card-img-top{
+        margin-top: 12%;
+    }
+    .mobile-title{
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 992px) { 
+    .removePC{
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 992px) {
+    .remove{
+        display: none;
+    }
+    .welcome-text{
+        font-size: 3.8rem;
+    }
+    .home-banner-text{
+        font-size: 3.8rem !important;
+    }
+    .banner-img{
+        height: 80vh;
+    }
+    .navbar{
+        padding: 1% !important;
+    }
+    .home-banner-btnHolder{
+        margin-top: -5% !important;
+    }
+}
