--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -31,3 +31,11 @@
     }
 }
 
+@media only screen and (max-width: 390px) {
+    .credit{
+        font-size: 0.7rem;
+    }
+    .dev-link{
+        font-size: 0.7rem;
+    }
+}
