--- a/src/components/pages/contact/contact.css
+++ b/src/components/pages/contact/contact.css
@@ -1,14 +1,64 @@
 .contact-bg{
     background-image: url(../../../images/contact/contactBG.jpeg);
-    background-size: 100% 100%;
-    height: 85vh;
+    background-size: 120% 100%;
+    height: 75vh;
 }
 
+.contact-detail-box{
+    box-shadow: var(--hover);
+}
+
+.submitBtn{
+    background-color: var(--red-alphaBtn) !important;
+    color: white !important;
+    border: none;
+    font-size: 1.1rem !important;
+    font-family: var(--font-mono) !important;
+    margin-top: 5% !important;
+}
+
+.text-area{
+    height: 100px !important;
+}
+
+.email-input{
+    box-shadow: none !important;
+    border: none !important;
+    border-radius: 0% !important;
+    border-bottom: 2px solid var(--wood) !important;
+    transition: 0.2s ease;
+    background-color: transparent !important;
+}
+
+.email-input:focus{
+    border-radius: 0% !important;
+    outline: none !important;
+}
+
+
+textarea{
+    box-shadow: none !important;
+    border: 2px solid var(--wood) !important;
+    background-color: transparent !important;
+}
+
+textarea:focus{
+    outline: none !important;
+}
+
+
+@media only screen and (max-width: 375px) {
+    .contact-bg{
+        background-image: url(../../../images/contact/contactBG.jpeg);
+        background-size: 300% 100%;
+        height: 65vh;
+    }
+}
 
 @media only screen and (max-width: 600px) {
     .contact-bg{
         background-image: url(../../../images/contact/contactBG.jpeg);
-        background-size: 200% 100%;
-        height: 75vh;
+        background-size: 350% 100%;
+        height: 65vh;
     }
 }
