--- a/src/components/pages/education/education.css
+++ b/src/components/pages/education/education.css
@@ -1,6 +1,6 @@
 .edu-bg{
     background-image: url(../../../images/education/eduBg.jpeg);
-    background-size: 100% 100%;
+    background-size: 120% 150%;
     height: 75vh;
 }
 
@@ -9,5 +9,17 @@
         background-image: url(../../../images/education/eduBg.jpeg);
         background-size: 200% 100%;
         height: 75vh;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .edu-bg{
+        background-image: url(../../../images/education/eduBg.jpeg);
+        background-size: 250% 120%;
+        height: 75vh;
+    }
+
+    .banner-section-title{
+        margin-top: 30%;
     }
 }
