--- a/src/components/pages/getInvolved/getInvolved.css
+++ b/src/components/pages/getInvolved/getInvolved.css
@@ -1,30 +1,49 @@
 .getInvolved-bg{
     background-image: url(../../../images/getInvolved/forest-bg.jpeg);
     background-size: 100% 100%;
-    height: 85vh;
+    height: 75vh;
 }
 
 .submit{
-    background-color: var(--red);
-    color: white;
+    background-color: var(--red-alphaBtn) !important;
+    color: white !important;
     border: none;
-    border-radius: 0.4rem;
-    padding: 1.5% 4%;
-    margin-top: 10%
+    margin-top: 10% !important;
 }
 
 .unsubscribe{
-    border: none;
-    border-radius: 0.2rem;
-    padding: 1.5% 4%;
-    background-color: rgb(224, 224, 224);
-    color: grey;
+    border: 2px solid var(--wood);
+    background-color: transparent !important;
+    color: var(--wood) !important;
+}
+
+
+.whatsappNumberInput{
+    background-color: transparent !important;
+    border-radius: 0% !important;
+    border: none !important;
+    border-bottom: 3px solid var(--red-alphaBtn) !important;
+    box-shadow: none !important;
+}
+
+.form-check-label{
+    font-family: var(--font-mono);
+    color: var(--wood);
 }
 
 @media only screen and (max-width: 600px) {
     .getInvolved-bg{
         background-image: url(../../../images/getInvolved/forest-bg.jpeg);
-        background-size: 200% 100%;
+        background-size: 280% 100%;
         height: 75vh;
+    }
+
+    .banner-section-title{
+        font-size: 3rem !important;
+        margin-top: 35% !important;
+    }
+
+    .form-bg{
+        border-radius: 0% !important;
     }
 }
