--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -5,14 +5,22 @@
 }
 
 .home-banner-text{
-    color: white;
+    color: white !important;
     margin-left: 2%;
+}
+
+.nice{
+    background-color: #ffffff;
+    padding-top: 8%;
+    padding-bottom: 8%;
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%236b6248' fill-opacity='0.21'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .welcome-text{
     font-family: var(--font-noto);
-    font-size: 5.5rem;
-    margin-top: 30%;
+    font-size: 5rem;
+    margin-top: 34%;
 }
 
 .what-we-do{
@@ -25,12 +33,16 @@
 }
 
 .what-we-do .card-title{
-    font-size: 2rem
+    font-size: 2rem;
+    font-family: var(--font-noto);
+}
+
+.what-we-do .card-text{
+    font-family: var(--font-mono);
 }
 
 .recent-events{
-    background-image: url(../../../images/texture.jpeg);
-    background-size: 100% 100%;
+    background-color: rgb(250 249 231); 
 }
 
 .recent-events{
@@ -54,17 +66,17 @@
 
 
 .dropdown-button{
-    background-color: #ff6600;
+    background-color: var(--red-alphaBtn);
     color: white;
-    padding: 1.2% 10%;
+    padding: 1.2% 15%;
     border: none;
     border-radius: 100rem;
 }
 
 .accordion-body{
-    background-color: white !important;
-    color: black !important;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2) !important;
+    background-color: var(--red-alphaBtn) !important;
+    color: white !important;
+    font-family: var(--font-mono);
     margin-top: 2% !important;
 }
 
@@ -77,15 +89,42 @@
 }
 
 .events-ongoing img{
-    border-radius: 0.8rem;
+    border-radius: 0rem;
 }
 
 .events-ongoing .card-title{
     font-size: 1.4rem;
+    font-family: var(--font-mono);
 }
 
 .events-ongoing p{
     text-align: left !important;
+    font-size: 1rem;
+    font-family: var(--font-mono);
+}
+
+.symbol{
+    font-size: 4em;
+    color: rgba(245, 71, 71, 0.637);
+}
+
+.define{
+    color: #6b6248;
+    font-family: var(--font-noto);
+}
+
+.about-link{
+    color:rgba(245, 71, 71, 0.637);
+    letter-spacing: 3px;
+    text-decoration: none;
+    border-bottom: 2px solid white;
+    transition: 0.2s ease-in-out;
+}
+
+.about-link:hover{
+    color:rgba(245, 71, 71, 0.637);
+    border-bottom: 2px solid var(--red-alpha);
+    transition: 0.2s ease-in-out;
 }
 
 @media only screen and (max-width: 600px) {
@@ -136,13 +175,30 @@
         font-size: 1.2rem;
         border: none;
         border-radius: 100rem;
-      }
+    }
+
+    .banner-img{
+        background-size: 180% 100% !important;
+    }
+
+    .orphanage-section{
+        padding: 12% 5% !important;
+    }
+
+    .orphanage-section-img{
+        margin-top: 15%;
+    }
+
+    .explore-more{
+        padding: 2.4% 5% !important;
+    }
 }
 
 @media (min-width: 992px) { 
     .removePC{
         display: none;
     }
+
 }
 
 @media only screen and (max-width: 992px) {
@@ -166,8 +222,24 @@
     }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 376px) {
     .welcome-text{
-        margin-top: 12%;
+        margin-top: 18%;
+    }
+
+    .banner-img{
+        background-size: 160% 100% !important;
+    }
+
+    .orphanage-section{
+        padding: 12% 5% !important;
+    }
+
+    .orphanage-section-img{
+        margin-top: 15%;
+    }
+
+    .welcome-text{
+        font-size: 3rem;
     }
 }
