--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&display=swap');
 
 :root{
   --font-domine: 'Domine', serif;
   --font-noto: 'Noto Serif Display', serif;
   --font-roboto: 'Roboto Slab', serif;
+  --font-mono: 'PT Sans Caption', sans-serif;
   --orange: #ff6600;
   --red: rgb(255 51 0);
   --hover: 0 3px 10px rgb(0 0 0 / 0.2);
+  --red-alpha: rgba(245, 71, 71, 0.808);
+  --wood: #6b6248;
+  --darkwood: #5e522b;
+  --lighter-bg:rgb(250 249 231);
+  --red-alphaBtn: rgb(199, 83, 51) ;
+/* rgb(194, 81, 50) rgb(245, 71, 71) */
 }
 
 
@@ -28,20 +36,79 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.containedBtn{
+  background-color: var(--red-alphaBtn) !important;
+  letter-spacing: 2px !important;
+  border: none !important;
+  outline: none !important;
+}
+
+.subtext{
+  margin-top: 1.4%;
+  letter-spacing: 1.5px;
+  color: #6b6248;
+  font-size: 1.2rem;
+  line-height: 35px;
+  font-family: var(--font-mono);
+}
+
+.hr-sec{
+  width: 5%;
+  color: #6b6248 !important;
+  opacity: 100%;
+}
+
+.learn-more-outline{
+  border: 2px solid #6b6248 !important;
+  color: #6b6248 !important;
+  font-family: var(--font-mono) !important;
+  letter-spacing: 2px !important;
+  font-size: 1.15rem !important;
+  border-radius: 0% !important;
+}
+
+.learn-more-outline:hover{
+  background-color: #6b624811 !important;
+}
+
+.alt-title{
+  color: white;
+  font-family: var(--font-noto);
+  font-size: 3.2rem;
+}
+
+.alt-subtext{
+  color: white;
+  /* font-family: var(--font-mono); */
+  letter-spacing: 2px;
+  font-size: 1.2rem;
+}
+
+body.modal-open {
+  padding-right: 0 !important;
+}
+
+
 .rounded-orangeBtn{
   background-color: var(--orange);
   color: white;
   padding: 1.7% 5%;
-  font-size: 1.2rem;
+  font-size: 18px;
+  letter-spacing: 2px;
   border: none;
   border-radius: 100rem;
+  font-family: var(--font-mono);
+  text-transform: uppercase;
 }
 
 .rounded-whiteBtn{
   background-color: #fff;
   color: var(--orange);
+  font-family: var(--font-mono);
   padding: 1.7% 5%;
-  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: 2px;
   border: none;
   border-radius: 100rem;
 }
@@ -63,28 +130,38 @@ code {
   font-weight: 800;
 }
 
+.explore-more{
+  background-color: #ff6600 !important;
+  color: white !important;
+  letter-spacing: 2px !important;
+  padding: 1% 4% !important;
+}
+
 .fancy-title{
   font-family: var(--font-noto);
 }
 
 .title{
-  font-weight: 800;
+  font-weight: 600;
   font-size: 3rem;
+  font-family: var(--font-noto);
 }
 
 .link{
-  color:rgb(255, 51, 0);
+  color:var(--red-alpha);
   text-decoration: none;
+  letter-spacing: 2px;
   font-size: 1rem;
+  transition: 0.2s ease;
 }
 
 .link:hover{
-  color:rgb(255, 51, 0);
-  text-decoration: none;
+  color:var(--red-alpha);
 }
 
 .location{
-  color:rgb(255, 51, 0);
+  color:var(--red-alpha);
+  font-family: var(--font-mono);
 }
 
 .banner-section-title{
@@ -99,33 +176,34 @@ code {
 .page-title{
   font-family: var(--font-noto);
   font-weight: 600;
+  color: var(--darkwood);
   font-size: 3rem;
   margin-top: 5%;
   margin-left: 4%;
 }
 
+.page-title-hr{
+  margin-left: 5%;
+}
+
 .whatsappBtn{
-  background-color: #25D366;
-  color: white;
+  background-color: #25D366 !important;
+  color: white !important;
   border: none;
-  padding: 2.5% 8%;
-  border-radius: 0.2rem;
+  font-family: var(--font-mono) !important;
 }
 
 .facebookBtn{
-  background-color: #1877F2;
-  color: white;
+  background-color: #1877F2 !important;
+  color: white !important;
   border: none;
-  padding: 2.5% 8%;
-  border-radius: 0.2rem;
+  font-family: var(--font-mono) !important;
 }
 
 .donateBtn{
-  background-color: var(--red);
-  color: #fff;
-  padding: 2% 12%;
+  background-color: var(--red-alphaBtn) !important;
+  color: #fff !important;
   border: none;
-  border-radius: 0.2rem;
 }
 
 .project-section-title{
@@ -138,4 +216,30 @@ code {
 .navbar-toggler-icon:focus {
     outline: none !important;
     box-shadow: none !important;
+}
+
+.modal-title{
+  color: var(--wood);
+  font-family: var(--font-noto);
+}
+
+.modal-body{
+  font-family: var(--font-mono);
+  font-size: 1.2rem;
+}
+
+.text-link{
+  color: var(--red-alpha);
+  text-decoration: none;
+}
+
+.text-link:hover{
+  color: var(--red-alpha);
+  text-decoration: 2px solid underline;
+}
+
+@media only screen and (max-width: 600px) {
+  .sectionSupportTitle{
+    margin-top: 10% !important;
+  }
 }
